feat: ts and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "2"
+version: "3"
 services:
-  web:
+  api:
     build: .
     ports:
       - "1337:1337"
-    depends_on:
+    links:
       - mongo
   mongo:
     image: mongo
