--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "myapp",
   "version": "1.0.0",
   "description": "Using express js",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "tsc index.ts --outDir ./dist && node ./dist/index.js",
+    "start:prod": "tsc index.ts --outDir ./dist && cross-env NODE_ENV=production node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.14",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.12.11",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
